--- a/genweb/core/browser/tinytemplates_plugin/template.htm
+++ b/genweb/core/browser/tinytemplates_plugin/template.htm
@@ -21,7 +21,7 @@
 				<span id="tmpldesc"></span></div>
 				<fieldset>
 					<legend i18n:translate="template_dlg_preview"></legend>
-					<iframe id="templatesrc" name="templatesrc" src="blank.htm" frameborder="0"></iframe>
+					<iframe id="templatesrc" name="templatesrc" src="" frameborder="0"></iframe>
 				</fieldset>
 			</div>
 
