--- a/genweb/core/browser/tinytemplates_plugin/template.htm
+++ b/genweb/core/browser/tinytemplates_plugin/template.htm
@@ -11,11 +11,8 @@
 	<div class="dialog-wrapper">
 		<form onsubmit="TemplateDialog.insert();return false;">
 			<div id="frmbody">
-				<div class="title" i18n:translate="template_dlg_desc"></div>
+				<div class="title" i18n:translate="TITOL"></div>
 				<div class="frmRow"><label for="tpath" i18n:attributes="title template_dlg_select" i18n:translate="template_dlg_label"></label>
-				<select id="tpath" name="tpath" onchange="TemplateDialog.selectTemplate(this.options[this.selectedIndex].value, this.options[this.selectedIndex].text);" class="mceFocus">
-					<option value="" i18n:translate="template_dlg_select"></option>
-				</select>
 				<span id="warning"></span></div>
 				<div class="frmRow"><label for="tdesc" i18n:translate="template_dlg_desc_label"></label>
 				<span id="tmpldesc"></span></div>
@@ -23,13 +20,14 @@
 					<legend i18n:translate="template_dlg_preview"></legend>
 					<iframe id="templatesrc" name="templatesrc" src="" frameborder="0"></iframe>
 				</fieldset>
+				<input type="button" id="add_item" class="standalone" name="add_item" i18n:attributes="value Afegeix_element_al_final" />
 			</div>
 
 			<div class="visualClear"><!-- --></div>
 
 			<div class="mceActionPanel formControls">
 				<span class="actionButtons">
-					<input type="submit" id="insert" class="context" name="insert" i18n:attributes="value common_insert" />
+					<input type="submit" id="insert" class="context" name="update" i18n:attributes="value common_update" />
 					<input type="button" id="cancel" class="standalone" name="cancel" i18n:attributes="value common_cancel" onclick="tinyMCEPopup.close();" />
 				</span>
 			</div>
