--- a/genweb/core/browser/tinytemplates_plugin/template.htm
+++ b/genweb/core/browser/tinytemplates_plugin/template.htm
@@ -5,11 +5,7 @@
 	<script type="text/javascript" src="../tiny_mce_popup.js"></script>
 	<script type="text/javascript" src="js/template.js"></script>
 	<script type="text/javascript" src="../@@collective.tinymcetemplates.templatelist"></script>
-	<style>
-		td {border:1px solid grey;padding:5px;}
-		.elimina {color: red;font-weight:bold;}
-		p {padding:5px 0;}
-	</style>
+	<link rel="stylesheet" type="text/css" media="screen" href="css/template.css">
 </head>
 <body>
 	<div class="dialog-wrapper">
