Plantillas interactivas: Pestañas

--- a/genweb/core/browser/tinytemplates_plugin/interactive_template.htm
+++ b/genweb/core/browser/tinytemplates_plugin/interactive_template.htm
@@ -9,21 +9,27 @@
             [
                 "carousel-dimatges",
                 "Carousel d'imatges",
-                "http://localhost:8080/plantillas/interactive-templates/carousel-dimatges/genweb.get.dxdocument.text",
+                "http://localhost:8080/plantillas/templates/carousel-dimatges/genweb.get.dxdocument.text",
                 "Carousel d'imatges navegables."
             ],
             [
                 "acordio",
                 "Acordió",
-                "http://localhost:8080/plantillas/interactive-templates/acordio/genweb.get.dxdocument.text",
+                "http://localhost:8080/plantillas/templates/acordio/genweb.get.dxdocument.text",
                 "Acordió d'opcions."
             ],
-            /*[
+            [
                 "pestanyes",
                 "Pestanyes",
-                "http://localhost:8080/plantillas/interactive-templates/pestanyes/genweb.get.dxdocument.text",
+                "http://localhost:8080/plantillas/templates/pestanyes/genweb.get.dxdocument.text",
                 "Contingut segmentat per pestanyes amb un altre estil."
-            ]*/];
+            ],
+            [
+                "pestanyes-caixa",
+                "Pestanyes caixa",
+                "http://localhost:8080/plantillas/templates/pestanyes-caixa/genweb.get.dxdocument.text",
+                "Contingut segmentat per pestanyes."
+            ]];
     </script>
     <link href="css/template.css" rel="stylesheet" type="text/css" />
 </head>
