--- a/genweb/core/browser/tinytemplates_plugin/interactive_template.htm
+++ b/genweb/core/browser/tinytemplates_plugin/interactive_template.htm
@@ -9,25 +9,25 @@
             [
                 "carousel-dimatges",
                 "Carousel d'imatges",
-                "http://localhost:8080/plantillas/templates/carousel-dimatges/genweb.get.dxdocument.text",
+                "/templates/carousel-dimatges/genweb.get.dxdocument.text",
                 "Carousel d'imatges navegables."
             ],
             [
                 "acordio",
                 "Acordió",
-                "http://localhost:8080/plantillas/templates/acordio/genweb.get.dxdocument.text",
+                "/templates/acordio/genweb.get.dxdocument.text",
                 "Acordió d'opcions."
             ],
             [
                 "pestanyes",
                 "Pestanyes",
-                "http://localhost:8080/plantillas/templates/pestanyes/genweb.get.dxdocument.text",
+                "/templates/pestanyes/genweb.get.dxdocument.text",
                 "Contingut segmentat per pestanyes amb un altre estil."
             ],
             [
                 "pestanyes-caixa",
                 "Pestanyes caixa",
-                "http://localhost:8080/plantillas/templates/pestanyes-caixa/genweb.get.dxdocument.text",
+                "/templates/pestanyes-caixa/genweb.get.dxdocument.text",
                 "Contingut segmentat per pestanyes."
             ]];
     </script>
